added no scrollbar class

--- a/app/globals.css
+++ b/app/globals.css
@@ -137,3 +137,7 @@
 .product-grid {
   @apply grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 justify-items-center gap-5
 }
+
+.scrollbar-hidden::-webkit-scrollbar {
+  display: none;
+}
